--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
   "version": "0.0.1",
   "manifest_version": 3,
   "background": {
-    "service_worker": "src/background.js"
+    "service_worker": "background.js"
   },
   "permissions": ["storage", "scripting", "bookmarks"],
   "action": {
-    "default_popup": "src/popup.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
@@ -22,5 +22,5 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
-  "options_page": "src/options.html"
+  "options_page": "options.html"
 }
