--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
+    "@types/chrome": "0.0.179",
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.13",
     "babel": "6.23.0",
     "babel-loader": "8.2.3",
+    "copy-webpack-plugin": "10.2.4",
+    "html-webpack-plugin": "5.5.0",
     "ts-node": "10.7.0",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
