--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,13 @@
       "128": "images/get_started128.png"
     }
   },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+L"
+      }
+    }
+  },
   "icons": {
     "16": "images/get_started16.png",
     "32": "images/get_started32.png",
