--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "7.17.5",
     "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
@@ -25,7 +27,9 @@
     "babel": "6.23.0",
     "babel-loader": "8.2.3",
     "copy-webpack-plugin": "10.2.4",
+    "css-loader": "6.7.0",
     "html-webpack-plugin": "5.5.0",
+    "style-loader": "3.3.1",
     "ts-node": "10.7.0",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
