--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,10 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/bookmark_search_16x16.png",
+      "32": "images/bookmark_search_32x32.png",
+      "48": "images/bookmark_search_48x48.png",
+      "128": "images/bookmark_search_128x128.png"
     }
   },
   "commands": {
@@ -24,10 +24,10 @@
     }
   },
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/bookmark_search_16x16.png",
+    "32": "images/bookmark_search_32x32.png",
+    "48": "images/bookmark_search_48x48.png",
+    "128": "images/bookmark_search_128x128.png"
   },
   "options_page": "options.html"
 }
