--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf dist search-bookmarks-*.zip",
+    "package": "npm run clean && npm run build-prod && node ./scripts/package.js && rimraf dist",
+    "build-prod": "webpack --mode production --no-devtool",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,11 +27,13 @@
     "@types/chrome": "0.0.179",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.13",
+    "archiver": "5.3.0",
     "babel": "6.23.0",
     "babel-loader": "8.2.3",
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.7.0",
     "html-webpack-plugin": "5.5.0",
+    "rimraf": "3.0.2",
     "style-loader": "3.3.1",
     "ts-node": "10.7.0",
     "typescript": "4.6.2",
