--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "package": "npm run clean && npm run build-prod && node ./scripts/package.js && rimraf dist",
     "build-prod": "webpack --mode production --no-devtool",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@types/chrome": "0.0.179",
+    "@types/jest": "27.4.1",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.13",
     "archiver": "5.3.0",
@@ -33,8 +34,10 @@
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.7.0",
     "html-webpack-plugin": "5.5.0",
+    "jest": "27.5.1",
     "rimraf": "3.0.2",
     "style-loader": "3.3.1",
+    "ts-jest": "27.1.3",
     "ts-node": "10.7.0",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
